@@ -1,5 +1,7 @@
 2014-02-12  Meteor Liu  <meteor1113@gmail.com>
 
+	* init-misc.el (locate-library): Fix diff-hl for emacs-24.1
+
 	* init-basic.el (and): Suppress error "directory ~/.emacs.d/server is unsafe" on windows.
 
 2014-02-11  Meteor Liu  <meteor1113@gmail.com>
